Data model task complete.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ web-app/node_modules
 web-app/.purs-repl
 data-model/node_modules
 data-model/.purs-repl
+data-model/.spago
+data-model/output
+.psc-ide-port
