--- a/web-app/package.json
+++ b/web-app/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/lordnull/panoramic-code-assignment#readme",
   "dependencies": {
-    "purescript": "^0.15.14"
+    "purescript": "^0.15.14",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
